--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Palindrome Birthday</title>
 </head>
 <body>
-    
+    <h1> Palindrome Birthday</h1>
+    <input type="date" id="bday-input">
+    <button id="check-btn">Check</button>
+    <div class="output"></div>
 </body>
 </html>
