--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <input type="date" id="bday-input">
     <button id="check-btn">Check</button>
     <div class="output"></div>
+    <script src="app.js"></script>
 </body>
 </html>
