--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Palindrome Birthday</title>
+    <link href="style.css" rel="stylesheet">
 </head>
 <body>
-    <h1> Palindrome Birthday</h1>
-    <input type="date" id="bday-input">
-    <button id="check-btn">Check</button>
-    <div class="output"></div>
-    <script src="app.js"></script>
+    <div id="flex-box">
+        <h1> Palindrome Birthday</h1>
+        <p class="p-style">Palindrome Days happen when the day's date can be read the same way backward and forward. Let's figure out whether your birthday day is a palindrome or not. ╰(*°▽°*)╯</p>
+        <input type="date" id="bday-input">
+    
+        <button id="check-btn" onmouseover="" style="cursor: pointer;">Check</button>
+        <div class="output"></div>
+        <script src="app.js"></script>
+    </div>
+   
 </body>
 </html>
