Correction: grammatical error

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div id="flex-box">
         <h1> Palindrome Birthday</h1>
-        <p class="p-style">Palindrome Days happen when the day's date can be read the same way backward and forward. Let's figure out whether your birthday day is a palindrome or not. ╰(*°▽°*)╯</p>
+        <p class="p-style">Palindrome Days happen when the day's date can be read the same way backward and forward. Let's figure out whether your birthday is a palindrome or not. ╰(*°▽°*)╯</p>
         <input type="date" id="bday-input">
     
         <button id="check-btn" onmouseover="" style="cursor: pointer;">Check</button>
